--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/white-blue.css">	
+	<link rel="stylesheet" href="css/themes/grey-white.css">	
 	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
@@ -30,9 +30,12 @@
 		<div class="tagline">Budding Dev | Code learner | Dreamer | Part Time Undead Hunter</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan"><i class="fab fa-linkedin"></i></a>
-
+			<div id="github">
+			<a target="_blank" href="https://github.com/tomdemonrivall"><i class="fab fa-github"></i></a>
+		</div>
+			<div id="linkedin">
+			<a target="_blank" href="https://www.linkedin.com/in/tom-de-monrivall-7aa742106/"><i class="fab fa-linkedin"></i></a>
+		</div>
     </div>
 	</main>
 </body>
