poem generator first iteration working api fetch

--- a/My-first-api/index.html
+++ b/My-first-api/index.html
@@ -10,21 +10,34 @@
   <body>
     <h1>Poem Generator</h1>
     <div>
+      <p
+        >Try searching for exemple: <br />
+        "Ozymandias" by "Percy Bysshe Shelley"<br />
+        "Sonnet" by "Shakespeare"<br />
+        "Not" by "Emily"<br />
+        <br />
+        List of author comming<br />
+        List of poem by authors comming<br />
+        Clear button comming<br />
+        Random Buttons comming<br />
+      </p>
+    </div>
+    <div>
       <form action="#" method="post">
         <div class="field">
           <label for="author">Author:</label>
           <input type="text" name="author" id="author" />
         </div>
         <div class="field">
-          <label for="title">Re-enter password:</label>
+          <label for="title">Title:</label>
           <input type="text" name="title" id="title" />
         </div>
         <div class="actions">
           <button type="button" id="search">Search</button>
         </div>
       </form>
-      <div id="poem"> </div>
+      <div id="poembox"> </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
