--- a/My-first-api/index.html
+++ b/My-first-api/index.html
@@ -16,7 +16,7 @@
         "Sonnet" by "Shakespeare"<br />
         "Not" by "Emily"<br />
         <br />
-        List of author comming<br />
+
         List of poem by authors comming<br />
         Clear button comming<br />
         Random Buttons comming<br />
@@ -26,16 +26,28 @@
       <form action="#" method="post">
         <div class="field">
           <label for="author">Author:</label>
-          <input type="text" name="author" id="author" />
+          <input list="Authors-list" name="Authors-list" id="author" />
+          <datalist id="Authors-list">
+            <option value="Emily Dickinson"> </option
+            ><option value="Percy Bysshe Shelley"> </option
+            ><option value="Shakespeare"> </option
+          ></datalist>
         </div>
         <div class="field">
           <label for="title">Title:</label>
-          <input type="text" name="title" id="title" />
+          <!-- <input type="text" name="title" id="title" /> -->
+          <input list="Title-list" name="Title-list" id="title" />
+          <datalist id="Title-list">
+            <option value="Ozymandias"> </option>
+            <option value="Not"> </option>
+            <option value="Sonnet"> </option>
+          </datalist>
         </div>
         <div class="actions">
           <button type="button" id="search">Search</button>
         </div>
       </form>
+      <form action="#" method="post"> </form>
       <div id="poembox"> </div>
     </div>
     <script src="./index.js"></script>
