added link to repo

--- a/My-first-api/index.html
+++ b/My-first-api/index.html
@@ -52,4 +52,12 @@
     </div>
     <script src="./index.js"></script>
   </body>
+  <footer
+    >Here is the
+    <a
+      href="https://github.com/tomdemonrivall/tomdemonrivall.github.io/tree/main/My-first-api"
+      >link</a
+    >
+    to my GitHub Repo</footer
+  >
 </html>
