--- a/My-first-api/index.html
+++ b/My-first-api/index.html
@@ -8,56 +8,69 @@
     <title>Poem Generators</title>
   </head>
   <body>
-    <h1>Poem Generator</h1>
-    <div>
-      <p
-        >Try searching for exemple: <br />
-        "Ozymandias" by "Percy Bysshe Shelley"<br />
-        "Sonnet" by "Shakespeare"<br />
-        "Not" by "Emily"<br />
-        <br />
-
-        List of poem by authors comming<br />
-        Clear button comming<br />
-        Random Buttons comming<br />
-      </p>
+    <div id="h1-title">
+      <h1>Poem Generator</h1>
+      <hr />
     </div>
-    <div>
-      <form action="#" method="post">
-        <div class="field">
-          <label for="author">Author:</label>
-          <input list="Authors-list" name="Authors-list" id="author" />
-          <datalist id="Authors-list">
-            <option value="Emily Dickinson"> </option
-            ><option value="Percy Bysshe Shelley"> </option
-            ><option value="Shakespeare"> </option
-          ></datalist>
+
+    <div id="Container">
+      <div id="Menu">
+        <div class="Choices">
+          <form action="#" method="post">
+            <div class="field">
+              <label for="author">Author:</label>
+              <input list="Authors-list" name="Authors-list" id="author" />
+              <datalist id="Authors-list">
+                <option value="Percy Bysshe Shelley"> </option>
+              </datalist>
+            </div>
+            <div class="field">
+              <label for="title">Title:</label>
+              <input list="Title-list" name="Title-list" id="title" />
+              <datalist id="Title-list">
+                <option value=""> </option>
+                <option value="Ozymandias"> </option>
+              </datalist>
+            </div>
+            <div class="buttons">
+              <div class="actions">
+                <button type="button" id="search">Search</button>
+              </div>
+              <div class="actions">
+                <button type="button" id="clear">Clear</button>
+              </div>
+            </div>
+          </form>
+          <form action="#" method="post"> </form>
         </div>
-        <div class="field">
-          <label for="title">Title:</label>
-          <!-- <input type="text" name="title" id="title" /> -->
-          <input list="Title-list" name="Title-list" id="title" />
-          <datalist id="Title-list">
-            <option value="Ozymandias"> </option>
-            <option value="Not"> </option>
-            <option value="Sonnet"> </option>
-          </datalist>
+        <div class="Notes">
+          <h3>Notes: </h3>
+          <p
+            >Try searching for exemple: <br />
+            "Ozymandias" by "Percy Bysshe Shelley"<br />
+            "Sonnet" by "Shakespeare"<br />
+            "Not" by "Emily"<br />
+            <br />
+
+            Random Buttons comming<br />
+          </p>
         </div>
-        <div class="actions">
-          <button type="button" id="search">Search</button>
-        </div>
-      </form>
-      <form action="#" method="post"> </form>
-      <div id="poembox"> </div>
+      </div>
+      <div class="PoemColumn">
+        <div id="poembox">test box </div>
+      </div>
     </div>
     <script src="./index.js"></script>
   </body>
-  <footer
-    >Here is the
-    <a
-      href="https://github.com/tomdemonrivall/tomdemonrivall.github.io/tree/main/My-first-api"
-      >link</a
-    >
-    to my GitHub Repo</footer
-  >
+  <footer>
+    <hr />
+    <div>
+      Here is the
+      <a
+        href="https://github.com/tomdemonrivall/tomdemonrivall.github.io/tree/main/My-first-api"
+        >link</a
+      >
+      to my GitHub Repo
+    </div>
+  </footer>
 </html>
