--- a/My-first-api/index.html
+++ b/My-first-api/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="PoemColumn">
-        <div id="poembox">test box </div>
+        <div id="poembox"></div>
       </div>
     </div>
     <script src="./index.js"></script>
