--- a/Paralax-101/index.html
+++ b/Paralax-101/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="scss/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>My Galaxy Paralax</title>
 </head>
 <title>Galaxy Paralax</title>
@@ -43,5 +43,5 @@
     </div>
   </container>
 </body>
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </html>
