changing Galaxy.jpg from background to img

--- a/Paralax-101/index.html
+++ b/Paralax-101/index.html
@@ -12,7 +12,9 @@
   <container>
     <header>Galaxy Paralax</header>
     <div id="back" class="layer" data-speed="-10">
-      <div class="galaxy">test</div>
+      <div class="galaxy">
+        <img src="/images/Galaxy.jpg" alt="galaxy">
+      </div>
     </div>
     <div id="middle" class="layer" data-speed="-2">
       <div class="trees" >
