adding case sensitive png for test

--- a/Paralax-101/index.html
+++ b/Paralax-101/index.html
@@ -14,6 +14,7 @@
     <div id="back" class="layer" data-speed="-10">
       <div class="galaxy">
         <img src="/images/Galaxy.png" alt="galaxy">
+        <img src="images/galaxy1.png" alt="galaxy">
       </div>
     </div>
     <div id="middle" class="layer" data-speed="-2">
