renamed galaxy jpg to lowercase

--- a/Paralax-101/index.html
+++ b/Paralax-101/index.html
@@ -13,8 +13,7 @@
     <header>Galaxy Paralax</header>
     <div id="back" class="layer" data-speed="-10">
       <div class="galaxy">
-        <img src="/images/Galaxy.png" alt="galaxy">
-        <img src="images/galaxy1.png" alt="galaxy">
+        <img src="images/galaxy2.jpg" alt="galaxy">
       </div>
     </div>
     <div id="middle" class="layer" data-speed="-2">
